:sparkles: ApolloClient w/ Cache, Instl TSLint

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -4,6 +4,11 @@ html {
   font-family: Roboto,  Arial, sans-serif;
 }
 
+body {
+  background-color: #333;
+  color: #EEE;
+}
+
 *,
 *:before,
 *:after {
