--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,16 +1,11 @@
-.list--horizontal {
+.list {
   ul {
     padding: 1rem 0 0 0;
     list-style-type: none;
-    background-color: #c6c6c6;
   }
-  li { 
+  li {
     padding: 1rem;
     display: inline;
     margin: 0 .5rem;
-  }  
-}
-
-.header--text {
-  color: #111;
+  }
 }
